@@ -9,29 +9,22 @@ import org.springframework.security.core.userdetails.UserDetails;
 import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class UserDetailsImpl implements UserDetails {
 
     private static final long serialVersionUID = 1L;
 
     private final Integer id;
-
     private final String username;
-
     private final String name;
-
     private final String lastName;
-
     private final String email;
-
     private final boolean enabled;
 
     @JsonIgnore
     private final String password;
 
     private final Collection<? extends GrantedAuthority> authorities;
-
 
     public UserDetailsImpl(Integer id, String username, String name, String lastName, String email,
                            boolean enabled, String password, Collection<? extends GrantedAuthority> authorities) {
@@ -46,9 +39,10 @@ public class UserDetailsImpl implements UserDetails {
     }
 
     public static UserDetailsImpl build(User user) {
-        List<GrantedAuthority> authorities = user.getRoles().stream()
+
+        List<SimpleGrantedAuthority> authorities = user.getRoles().stream()
                 .map(role -> new SimpleGrantedAuthority(role.getName().name()))
-                .collect(Collectors.toList());
+                .toList(); //
 
         return new UserDetailsImpl(
                 user.getId(),
@@ -58,7 +52,8 @@ public class UserDetailsImpl implements UserDetails {
                 user.getEmail(),
                 user.isEnabled(),
                 user.getPassword(),
-                authorities);
+                authorities
+        );
     }
 
     @Override
@@ -114,11 +109,13 @@ public class UserDetailsImpl implements UserDetails {
 
     @Override
     public boolean equals(Object o) {
-        if (this == o)
-            return true;
-        if (o == null || getClass() != o.getClass())
-            return false;
-        UserDetailsImpl user = (UserDetailsImpl) o;
-        return Objects.equals(id, user.id);
+        if (this == o) return true;
+        if (!(o instanceof UserDetailsImpl that)) return false;
+        return Objects.equals(id, that.id);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(id);
     }
 }
